# timesheet-translator

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg  setup.py
tests/: test_utils.py
timesheet_translator/: config.py  main.py  timesheet_w26_20230626.xlsx  timesheet_w42_20231016.xlsx  utils.py
