[metadata]
name = timesheet_translator
description = Create the skeleton for a python package/project
author = James Barton
author_email = james.barton@blueyonder.co.uk
url = https://github.com/cjb230/timesheet-translator
license = MIT
license_file = LICENSE

[options]
packages = find_namespace:
setup_requires =
    setuptools_scm
    wheel

[options.entry_points]
console_scripts =
    timesheet_translator = timesheet_translator.__main__:main
